revamp/styles/nav-bar.css
:root {
    --light-blue: #18B0B0;
    --dark-blue: #156979;
    --light-grey: #7a7a7a;
    --dark-grey: #333; /* #808284; */
    --orange: #FDA965;
    --light-orange: rgb(252, 198, 155);
    --white: white;
}

html {
    background-color: var(--orange);
    /* background-image: url("../images/grid-background.jpg");
    background-size: 100px; */
    font-family: 'Krub', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: var(--white);
}

body {
    margin: 0;
    text-align: center;
}

#menu {
    display: flex;
    flex-wrap: wrap;
    line-height: 1.2em;
    align-items: center;
    top: 0;
    margin-bottom: 1%;
    flex-direction: row;
    justify-content: space-evenly;
    background-color: var(--dark-grey);
    padding: 0.2% 0.7% 0.7% 0.7%;
    /* border-radius: 0 0 14px 14px; */
    font-size: larger;
}

#menu a {
    flex: 0 1 auto;
    margin: 0.3%;
    border-radius: 6px;
    padding: 0.3%;
    transition: 0.2s;
    color: var(--white);
    text-decoration: none;
}

.section-title {
    background-size: cover;
    background-color: var(--dark-grey);
    background-position: center;
    background-attachment: fixed;
    background-blend-mode: saturation;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 20vw;
    margin: 0;
    font-weight: lighter;
    z-index: 1;
    transform: translate3d(0, 0, 1px);
    overflow: hidden;
}

.section-title-bg {
    position: absolute;
    width: 100%;
    left: 0;
    top: 0;
    z-index: -20;
    transform: translate3d(0, 0, -20px);
    -webkit-transform: translate3d(0, 0, -20px);
}

a:link { /* Let's have all external links orange, and internal blue */
    background-color: var(--dark-grey);
    padding: 1px;
    border-radius: 2px;    
    text-decoration: none;
    transition: 0.2s;
    color: var(--white);
}

a:visited {
    color: var(--white);
}

a.external:hover {
    color: var(--orange);
    font-size: 102%;
}

a:hover {
    color: var(--light-blue);
    font-size: 102%;
}

.section-body {
    margin: 1.5vw;
    padding: 5vw;
    border-start-end-radius: 5vw;
    border-radius: 1vw;
    background-color: var(--light-grey);
}

@media only screen and (max-width: 440px) {
    #menu {
        font-size: medium;
        flex-direction: column;
    }
    .section-title {
        height: 30vw;
    }
}

@-o-viewport {
    zoom: 1.0;
    width: extend-to-zoom;
}
@viewport {
    zoom: 1.0;
    width: extend-to-zoom;
}
@-ms-viewport {
    zoom: 1.0;
    width: extend-to-zoom;
}

